--- a/config/mycommand.sty
+++ b/config/mycommand.sty
@@ -84,6 +84,8 @@
 \newcommand{\maximal}{\operatorname{max}}
 \newcommand{\maximum}{\operatorname{max^{\ast}}}
 \newcommand{\re}{\operatorname{re}}
+\newcommand{\ar}{\operatorname{ar}}
+\newcommand{\ot}{\operatorname{ot}}
 \newcommand{\idm}{\operatorname{idm}}
 \newcommand{\idx}{\operatorname{idx}}
 \newcommand{\prd}{\operatorname{prd}}
