--- a/config/mycommand.sty
+++ b/config/mycommand.sty
@@ -86,6 +86,8 @@
 \newcommand{\re}{\operatorname{re}}
 \newcommand{\ar}{\operatorname{ar}}
 \newcommand{\ot}{\operatorname{ot}}
+\newcommand{\fker}{\operatorname{fker}}
+\newcommand{\ceq}{\operatorname{ceq}}
 \newcommand{\idm}{\operatorname{idm}}
 \newcommand{\idx}{\operatorname{idx}}
 \newcommand{\prd}{\operatorname{prd}}
